# node-talk

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  PRD.md  README.md  TASKS.md
.github/workflows/: ci.yml  release.yml
cmake/: Packaging.cmake  Version.cmake
docs/: ARCHITECTURE.md  BUILD.md  PACKAGING.md  PROTOCOL.md  RELEASE.md  TESTING.md
packaging/linux/: AppImage.sh  nodetalk.desktop
packaging/macos/: Info.plist.in  nodetalk.icns
packaging/windows/: nodetalk.iss  nodetalk.rc
resources/i18n/: nodetalk_en.ts  nodetalk_ru.ts
src/: main.cpp
src/app/: Application.cpp  Application.h  Logger.cpp  Logger.h  Paths.cpp  Paths.h  Version.h.in
src/core/: EventLog.cpp  EventLog.h  Identity.cpp  Identity.h  Settings.cpp  Settings.h
src/db/: Database.cpp  Database.h  EventRepository.cpp  EventRepository.h  MessageRepository.cpp  MessageRepository.h  PeerRepository.cpp  PeerRepository.h  TransferRepository.cpp  TransferRepository.h
src/model/: Message.h  Peer.h  Transfer.h
src/net/: DiscoveryService.cpp  DiscoveryService.h  FileTransferManager.cpp  FileTransferManager.h  PeerLink.cpp  PeerLink.h  PeerManager.cpp  PeerManager.h  Protocol.cpp  Protocol.h  TransportServer.cpp  TransportServer.h
src/ui/: ChatView.cpp  ChatView.h  EventLogWidget.cpp  EventLogWidget.h  MainWindow.cpp  MainWindow.h  ManualAddPeerDialog.cpp  ManualAddPeerDialog.h  MessageInput.cpp  MessageInput.h  PeerListModel.cpp  PeerListModel.h  PeerListWidget.cpp  PeerListWidget.h  SettingsDialog.cpp  SettingsDialog.h  TransferWidget.cpp  TransferWidget.h  TrayIcon.cpp  TrayIcon.h  TrustDialog.cpp  TrustDialog.h
tests/: CMakeLists.txt  tst_database.cpp  tst_filetransfer.cpp  tst_identity.cpp  tst_protocol.cpp  tst_smoke.cpp
